--- a/myFiles/myStyle.css
+++ b/myFiles/myStyle.css
@@ -28,6 +28,7 @@ h3 {
     transform: rotate(-45deg);
     animation-name: beat;
     animation-duration: 1s;
+    animation-iteration-count: infinite;
 }
 
 .heart:after {
